# qrcode

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerOptions.cmake  FeatureCheck.cmake
include/: config.h.in  qr_config.h.in
include/qrcode/: qr.h  qr_matrix.h  qrcode.h
src/: qrcode.c
src/lib/: qr.c  qr_matrix.c  qrcode.c
src/php/: CMakeLists.txt  php_export.c
src/python/: CMakeLists.txt  py_export.c
src/shell/: CMakeLists.txt  shell.c
